⚡️ エンドポイントの際設計。(主にバックエンド)。
