# docs/openapi.yaml
@@ -207,64 +207,6 @@ paths:
                   playlist:
                     $ref: "#/components/schemas/Playlist"
 
-  /users/{userId}/playlists/title/{playlistTitle}/videos:
-    post:
-      summary: Add new video to an already existing playlist
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: playlistTitle
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                videoId:
-                  type: string
-                  example: DHGOI"%$&KMSSM
-      responses:
-        201:
-          description: success response containing a message that the new video has been added
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-
-  /users/{userId}/playlists/title/{playlistTitle}/videos/{memberId}:
-    delete:
-      summary: Delete video from playlist by memberId
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: playlistId
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: memberId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        204:
-          description: notify deletion
-
   /users/{userId}/playlists/id/{playlistId}:
     get:
       summary: Get playlist from userId and playlistTitle
@@ -342,6 +284,29 @@ paths:
                   message:
                     type: string
 
+  /users/{userId}/playlists/id/{playlistId}/videos/{memberId}:
+    delete:
+      summary: Delete video from playlist by memberId
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: playlistId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: memberId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        204:
+          description: notify deletion
+
   /users/{userId}/playlists/id/{playlistId}/title:
     patch:
       summary: Change the playlist title
@@ -369,23 +334,3 @@ paths:
       responses:
         204:
           description: notify change
-
-  /sessions/{provider}:
-    post:
-      summary: create and return provider auth URL
-      parameters:
-        - name: provider
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        302:
-          description: successful response containing created provider URL
-          headers:
-            Location:
-              description: the URL the client should be redirected
-              schema:
-                type: string
-                format: uri
-              example: ${process.env.NEXTAUTH_URL}/signin/${provider}?callbackUrl=${callbackUrl}
