# src/app/v1/api/users/[userId]/playlists/id/[playlistId]/videos/[memberId]/route.ts
@@ -26,12 +26,12 @@ export const DELETE = async (
 ): Promise<NextResponse> => {
   try {
     const {
-      userId,
+      userId: userIdParam,
       playlistId,
       memberId,
     }: { userId: string; playlistId: string; memberId: string } = await params;
 
-    if (!userId || !playlistId || !memberId) {
+    if (!userIdParam || !playlistId || !memberId) {
       throw new MissingParamsError(
         "パラメータが不足しています。",
         "Required parameter is missing or invalid",
@@ -40,13 +40,14 @@ export const DELETE = async (
 
     const session: Session | null = await auth();
 
-    if (!(session?.userId === userId)) {
-      console.log("Unauthorized!");
+    if ((session?.userId !== userIdParam && userIdParam !== "me") || !session) {
       throw new UnAuthorizeError(
         "認証に失敗しました。もう一度ログインし直してください。",
         "You are not authenticated. Please log in and try again",
       );
     }
+
+    const userId = userIdParam === "me" ? session.userId : userIdParam;
 
     await deletePlaylistMemberByMemberId.run(
       pool,
